Fix spacing

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,12 @@
  *= require_tree .
  *= require_self
  */
+div{
+  border: 1px solid black;
+  box-sizing: border-box;
+  float: left;
+  font-size: 4rem;
+  margin: 20px;
+  padding: 2%;
+  width: 25%;
+}
